--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "method-override": "~1.0.0",
     "mongoose": "~3.8.8",
     "morgan": "~1.0.0",
+    "rimraf": "^2.2.8",
     "serve-favicon": "~2.0.1"
   },
   "devDependencies": {
