--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.10",
     "textAngular": "~1.3.6",
-    "angular-file-upload": "~1.1.5"
+    "angular-file-upload": "~1.1.5",
+    "angularjs-toaster": "~0.4.10"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
